--- a/src/app/pages/sku-management/product-cashier/index/index.component.scss
+++ b/src/app/pages/sku-management/product-cashier/index/index.component.scss
@@ -1,9 +1,27 @@
+.ayo-main-wrapper {
+    position: relative;
+
+    .material {
+        box-shadow: none;
+    }
+}
+
+.tab-link {
+    &, &:hover {
+        text-decoration: none!important;
+    }
+}
+
 .search-field {
     display: flex;
     align-items: center;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 2;
 
     .mat-input-element {
-        padding: 10px 32px 10px 0;
+        padding: 5px 32px 5px 0;
         border-bottom: 1px solid #ccc;
         transition: border-color .3s;
 
