Fix UI kpi setting

--- a/src/app/pages/kpi-setting/component/edit-kpi-setting.component.html
+++ b/src/app/pages/kpi-setting/component/edit-kpi-setting.component.html
@@ -42,8 +42,10 @@
             <div fxLayout="row" *ngIf="!enableEdit">
               <h3>Status: <span class="text-boxed mat-green-700-bg">active</span></h3>
             </div>
-            <div fxLayout="row mb-16" *ngIf="existingAreas && existingAreas.length > 0">
+            <div fxLayout="row" *ngIf="existingAreas && existingAreas.length > 0">
               <h3>Existing Areas</h3>
+            </div>
+            <div fxLayout="row mb-16" *ngIf="existingAreas && existingAreas.length > 0">
               <ngx-datatable class="material" [rows]="existingAreas" [loadingIndicator]="loadingIndicator" [columnMode]="'force'"
                 [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true"
                 [count]="existingAreas.length" [externalSorting]="false" (page)="setPage($event)">
