--- a/src/app/pages/notification/create/custom-notification/import/import-custom-notification.component.html
+++ b/src/app/pages/notification/create/custom-notification/import/import-custom-notification.component.html
@@ -5,7 +5,7 @@
     <div fxFlex fxLayout="row" fxLayoutAlign="space-between center">
 
       <div fxFlex fxLayout="row" fxLayoutAlign="start center">
-        <span>Unggah File XLS</span>
+        <span>Unggah File XLSX</span>
       </div>
 
     </div>
