Finish CDE-3660 Account Protection

--- a/src/@fuse/scss/partials/_navigation.scss
+++ b/src/@fuse/scss/partials/_navigation.scss
@@ -43,7 +43,7 @@
 
             > .nav-link-title {
                 flex: 1;
-                white-space: nowrap;
+                white-space: normal;
             }
 
             .nav-link-badge {
