--- a/src/app/pages/customer-care/pertanyaan-verifikasi-agent/pertanyaan-verifikasi-agent-detail/pertanyaan-verifikasi-agent-detail.component.html
+++ b/src/app/pages/customer-care/pertanyaan-verifikasi-agent/pertanyaan-verifikasi-agent-detail/pertanyaan-verifikasi-agent-detail.component.html
@@ -62,6 +62,7 @@
                     </form>
                 </mat-tab>
                 <mat-tab label="Pemulihan Perangkat">
-                    <app-device-recover></app-device-recover>
+                    <app-device-recover [business_id]="business_id" [retailer_data]="retailer_data">
+                    </app-device-recover>
                 </mat-tab>
             </mat-tab-group>
