--- a/src/scss/globals/global.scss
+++ b/src/scss/globals/global.scss
@@ -1363,3 +1363,9 @@ a {
   color: black;
   padding-bottom: 10px;
 }
+
+.mat-custom-error {
+  font-size: 12px;
+  color: #f44336;
+  margin-top: 8px;
+}
