--- a/src/scss/globals/global.prod.scss
+++ b/src/scss/globals/global.prod.scss
@@ -1367,3 +1367,9 @@ a {
   color: black;
   padding-bottom: 10px;
 }
+
+.mat-custom-error {
+  font-size: 12px;
+  color: #f44336;
+  margin-top: 8px;
+}
